# michelson-adt

./: README.md  dune-project  flake.nix  michelson-adt.opam
.github/workflows/: main.yml
src/lib/carthage/: adt.ml  adt.mli  dune
src/lib/common/: annot.ml  annot.mli  dune  loc.ml  loc.mli  node.ml  node.mli
src/lib/edo/: adt.ml  adt.mli  dune  typ.ml  typ.mli  typed_adt.ml  typed_adt.mli  typer.ml  utils.ml
src/test/edo/: dune  typing.ml
